# RayCastingGaem

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: .directory  Main.c  Main.cpp  ProToMath.c  ProToMath.cpp  ProToMath.h  TextureLoader.c  TextureLoader.cpp  TextureLoader.h  main.c  protoMath.c  protoMath.h
textureconverter/: convert_texture.py  convert_tilemap.py
textures/: convert_texture.py
